test/arrays/claridge/arraySizeMismatch.good
arraySizeMismatch.chpl:3: error: halt reached - assigning between arrays of different shapes in dimension 1: 3 vs. 4
