test/arrays/claridge/arraySizeMismatch.chpl
var A: [1..3] int;
var B: [1..4] int;
A = B;